--- a/frontend/homepage.html
+++ b/frontend/homepage.html
@@ -15,7 +15,7 @@
 </div>
 <!-- create input box -->
 <div class="centered-bottom">
-    <input type="text" class="input" placeholder="Enter your affirmation here">
+    <input type="text" class="input" placeholder="What are you currently dealing with?">
 </div>
 
 <!-- create submit button under the input box -->
