--- a/frontend/homepage.html
+++ b/frontend/homepage.html
@@ -25,13 +25,13 @@
 <!-- create submit button under the input box -->
 <div class="centered-below">
     <input type = "button" class="button" value = "Submit" onclick = saveInput() />
-    <h2 id="message"></h1>
+    <h2 id="message"></h2>
 
 </div>
-<><script> 
+<script> 
     function saveInput() {
         let userInput = document.querySelector("#userInput");
         let message = document.querySelector("#message");
-        message.innerHTML = "Thank you for your submission!";
+        message.innerHTML = "Thank you for your submissionhank you for your submissionhank you for your submission!";
     }
 </script>
