--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,12 +1,12 @@
 <!-- Import background css and javascript -->
-<link rel="stylesheet" href="css/style.css" />
+<link rel="stylesheet" href="frontend/css/style.css" />
 
 <!-- create html body -->
-<body> 
+<body>
     <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/gsap-latest-beta.min.js?v=clamsauce"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/5.1.5/pixi.min.js"></script>
     <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/PixiPlugin3.min.js"></script>
-    <script src="js/background.js"></script>
+    <script src="frontend/js/background.js"></script>
 </body>
 
 <!-- create text box at the center-->
@@ -15,8 +15,8 @@
 </div>
 <!-- create input box -->
 <div class="centered-bottom">
-    <input type="text" 
-    class="input" 
+    <input type="text"
+    class="input"
     id="userInput"
     placeholder="What are you currently dealing with?">
 
@@ -28,10 +28,27 @@
     <h2 id="message"></h2>
 
 </div>
-<script> 
+<script>
     function saveInput() {
         let userInput = document.querySelector("#userInput");
         let message = document.querySelector("#message");
-        message.innerHTML = "Thank you for your submissionhank you for your submissionhank you for your submission!";
+        message.innerHTML = "Please wait while we send your affirmation to the universe...";
+        // Create API call to https://journey-within-outside.herokuapp.com/get-affirmation with JSON body { "text": userInput.value }
+        // Fetch API call
+        fetch('https://journey-within-outside.herokuapp.com/get-affirmation', {
+            method: 'POST',
+            body: JSON.stringify({ "text": userInput.value }),
+            headers: {
+                'Content-Type': 'application/json'
+            }
+        })
+        .then(response => response.json())
+        .then(data => {
+            console.log('Success:', data);
+            return data.affirmation;
+        })
+        .catch((error) => {
+            console.error('Error:', error);
+        });
     }
 </script>
