--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,12 +1,12 @@
 <!-- Import background css and javascript -->
-<link rel="stylesheet" href="frontend/css/style.css" />
+<link rel="stylesheet" href="css/style.css" />
 
 <!-- create html body -->
 <body>
     <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/gsap-latest-beta.min.js?v=clamsauce"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/5.1.5/pixi.min.js"></script>
     <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/PixiPlugin3.min.js"></script>
-    <script src="frontend/js/background.js"></script>
+    <script src="js/background.js"></script>
 </body>
 
 <!-- create text box at the center-->
