--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,10 @@
   property="og:image"
   content="https://affirmations-1-m6137384.deta.app/favicon.ico"
 />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
+<meta
+  name="viewport"
+  content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
+/>
 
 <!-- Import background css and javascript -->
 <link rel="stylesheet" href="css/style.css" />
